# mcp-obsidian-remote

./: .gitignore  README.md  package.json  tsconfig.json
server/: Cargo.toml
server/src/: config.rs  main.rs
src/: index.ts  obsidian-client.ts
