[package]
name = "obsidian-api-server"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Obsidian Local REST API"
license = "MIT"
repository = "https://github.com/kazuph/mcp-obsidian-remote"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http2", "tokio", "tower", "tower-log"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client and utilities
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
mime_guess = "2.0"

# TLS and crypto
rcgen = "0.12"
rustls = "0.22"
rustls-pemfile = "2.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }

# File system and path handling
walkdir = "2.4"
notify = "6.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment and configuration
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive", "env"] }

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Markdown processing
pulldown-cmark = "0.10"
gray_matter = "0.2"

# Base64 encoding
base64 = "0.21"

# Regex
regex = "1.10"
